Add client dev launcher